--- a/src/main.tex
+++ b/src/main.tex
@@ -28,7 +28,7 @@
 firstexercise,
 thirdexercise%
 }
-\DisplaySolutions
+% \DisplaySolutions
 % Different function tests
 % \makeset[nohead,intro]{11}{\phead,\exclude{secondexercise}{2,3},secondexercise}
 % \makeset[nohead,intro]{11}{\phead,thirdexercise, secondexercise, firstexercise}
