--- a/src/problemstyle.tex
+++ b/src/problemstyle.tex
@@ -89,7 +89,7 @@
   \par\@atMargin{{\exbank@opt@partProblemHeader}}{\ppMargin}\ignorespaces\else{\exbank@opt@partProblemHeader}\fi%
 }%
 \At\EndPartproblem{%
-	\egroup\tighten@paragraph%
+	\egroup\tighten@paragraph\par%
 	\vspace*{\pMarginBelow}%
 }
 
