--- a/src/problemstyle.tex
+++ b/src/problemstyle.tex
@@ -23,8 +23,11 @@
 %: Part problem: distance above the start of the part problem to the previous item
 \newlength{\ppMarginAbove}
 %:=\ppMargin
-%: Part problem: how far away from the text should the part problem labels be
+%: Part problem: how far away from the text the part problem labels are.
 \newlength{\ppMargin}
+%:=\introMargin
+%: The offset of margins for intros
+\newlength{\introMargin}
 \newlength{\solutionMarginLeft}
 \newlength{\solutionMarginAbove}
 %:-
@@ -39,7 +42,7 @@
 \setlength{\solutionMarginAbove}{1em}
 \setlength{\pMarginBelow}{0em}
 \setlength{\pMarginAbove}{\baselineskip}
-
+\setlength{\introMargin}{-1.5em}
 \setlength{\ppMarginBelow}{\baselineskip}
 \setlength{\ppMarginAbove}{0em}
 
