Updated more of the pp markings. To be continued

--- a/src/problemstyle.tex
+++ b/src/problemstyle.tex
@@ -48,15 +48,26 @@
 
 
 \setlength\parindent{0pt}
+\newbox\ppmarkbox
+\newlength\markskip
+\setlength\markskip{4\baselineskip}
 
-\newcommand{\@atMargin}[2]{\rule[-4em]{0pt}{0em}\vadjust{\@domark{#1}{#2}}}
+\setbox\ppmarkbox\hbox{%
+\vrule\@height.7\markskip
+        \@depth.3\markskip%
+        \@width\z@}%
+\def\markstrut{\relax\ifmmode\copy\ppmarkbox\else\unhcopy\ppmarkbox\fi}
+
+
+\newcommand{\@atMargin}[2]{\markstrut\vadjust{\@domark{#1}{#2}}}
 
 \newcommand{\@domark}[2]{%
     \hskip#2\relax\vbox to 0pt{%
-      \kern\the\dimexpr-4em\relax%
+      \kern-\dp\ppmarkbox\relax%
       \smash{\llap{#1}}%
       \vss%
     }%
+% \vskip\the\dimexpr-\markskip\relax%
 }
 
 \def\solMargin{\dimexpr \ppMargin\relax}
