Made \buildsets+docs, updated \pMarginLeft

--- a/src/problemstyle.tex
+++ b/src/problemstyle.tex
@@ -36,8 +36,8 @@
 
 
 
-\setlength{\pMarginLeft}{-2em}
 \setlength{\ppMargin}{0.5em}
+\setlength{\pMarginLeft}{-\ppMargin-2.5em}
 \setlength{\solutionMarginLeft}{\ppMargin}
 \setlength{\solutionMarginAbove}{1em}
 \setlength{\pMarginBelow}{0em}
